Fix Library Grid Scaling issue.
Fix for #257
Now each column can adjust it's height, and keeps it's aspect ratio, based on the cover images.
Only downside is that if the images are not the same size, they may not line up on the bottom edge. But this looks much more natural

--- a/src/components/search/SearchGrid.css
+++ b/src/components/search/SearchGrid.css
@@ -2,6 +2,7 @@
   position: relative;
   opacity: 0.8;
   background-size: cover;
+  text-align: center;
 }
 
 .coverContainer:hover {
